# LasagnaStack

./: .env.sample  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: dev-test.yaml  main-deploy.yaml  main-docs.yaml
src/lasagnastack/: __main__.py  base.py  cache.py  cli.py  io.py  logging_config.py  pipeline.py  reel_pipeline.py
src/lasagnastack/llm/: __init__.py  base.py  gemini.py  openrouter.py
src/lasagnastack/models/: critique.py  cut_list.py  enhance.py  inventory.py  post_caption.py
src/lasagnastack/prompts/: analyse.md  analyse.txt  critique.md  critique.txt  direct.md  direct.txt  enhance.md  enhance.txt  post_caption.md
src/lasagnastack/stages/: analyse.py  critique.py  direct.py  enhance.py  ingest.py  post_caption.py  render.py
src/lasagnastack/video_editors/: __init__.py  base.py  pycapcut.py
tests/: conftest.py  test_analyse.py  test_critique.py  test_direct.py  test_ingest.py  test_render.py
